--- a/requirements-py310.txt
+++ b/requirements-py310.txt
@@ -28,9 +28,6 @@ llvmlite==0.40.1
 Markdown==3.4.4
 MarkupSafe==2.1.1
 matplotlib==3.7.2
-mkl-fft==1.3.6
-mkl-random==1.2.2
-mkl-service==2.4.0
 mpmath==1.3.0
 msgpack==1.0.5
 networkx==3.1
@@ -55,7 +52,7 @@ requests-oauthlib==1.3.1
 resampy==0.4.2
 rsa==4.9
 scikit-learn==1.3.0
-scipy==1.11.2
+scipy
 setuptools==68.0.0
 six==1.16.0
 soundfile==0.12.1
@@ -67,8 +64,12 @@ threadpoolctl==3.2.0
 torch==2.0.0
 torchaudio==2.0.0
 torchvision==0.15.0
-triton==2.0.0
 typing_extensions==4.7.1
 urllib3==1.26.16
 Werkzeug==2.3.7
 wheel==0.38.4
+
+triton==2.0.0
+mkl-fft==1.3.6
+mkl-random==1.2.2
+mkl-service==2.4.0
