--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,10 @@ monotonic_align/monotonic_align
 configs/dracu_japanese_base2.json
 configs/tolove_japanese_base2.json
 assets/
+assets_cleaned/
 *.log
 .idea/
+
+*.wav
+filelists/
+models/
